<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightlavender"
    tools:context=".ui.BibliotecaActivity">

    <TextView
        android:id="@+id/listaTitulo"
        android:layout_width="231dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/texto_portada"
        android:fontFamily="@font/advent_pro_medium"
        android:text="@string/mi_biblioteca"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imgLeido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/imgLeido"
        app:layout_constraintEnd_toStartOf="@+id/txtLeido"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtLeido"
        app:srcCompat="@drawable/icons8_done_30" />

    <TextView
        android:id="@+id/txtLeido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/txtLeido"
        android:fontFamily="@font/advent_pro_medium"
        android:text="Libros leídos"
        android:textColor="@color/darkblue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvLibrosLeido"
        android:layout_width="410dp"
        android:layout_height="215dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:padding="8dp"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/txtPendientes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLeido"
        app:layout_constraintVertical_bias="0.052"
        tools:listitem="@layout/book_biblio" />

    <ImageView
        android:id="@+id/imgPend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/imgPendientes"
        app:layout_constraintEnd_toStartOf="@+id/txtPendientes"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtPendientes"
        app:srcCompat="@drawable/icons8_pendiente_48" />

    <TextView
        android:id="@+id/txtPendientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="220dp"
        android:contentDescription="@string/txtPendientes"
        android:fontFamily="@font/advent_pro_medium"
        android:text="Libros pendientes"
        android:textColor="@color/darkblue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLeido"
        tools:ignore="HardcodedText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvLibrosPend"
        android:layout_width="410dp"
        android:layout_height="215dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:padding="8dp"
        android:scrollbars="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPendientes"
        tools:listitem="@layout/book_biblio" />

    <ImageView
        android:id="@+id/imgFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/imgFavoritos"
        app:layout_constraintEnd_toStartOf="@+id/txtFavoritos"
        app:layout_constraintTop_toTopOf="@+id/txtFavoritos"
        app:srcCompat="@drawable/icons8_favorito_48" />

    <TextView
        android:id="@+id/txtFavoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="220dp"
        android:contentDescription="@string/txtFavoritos"
        android:fontFamily="@font/advent_pro_medium"
        android:text="Libros favoritos"
        android:textColor="@color/darkblue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPendientes"
        tools:ignore="HardcodedText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvLibrosFav"
        android:layout_width="410dp"
        android:layout_height="215dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:padding="8dp"
        android:scrollbars="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFavoritos"
        tools:listitem="@layout/book_biblio">

    </androidx.recyclerview.widget.RecyclerView>

    <include
        android:id="@+id/include"
        layout="@layout/botones_navegacion"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>